--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -1,3 +1,7 @@
+.row {
+    margin-left: 20px;
+}
+
 .row-posters {
     display: flex;
     overflow-y: hidden;
@@ -22,7 +26,7 @@
 }
 
 .row-posterLarge {
-    max-height: 300px;
+    max-height: 250px;
 }
 
 .row-posterLarge:hover {
