--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,15 +4,24 @@
     width: 100%;
     padding: 20px;
     height: 30px;
+    z-index: 1;
 
     display: flex;
     justify-content: space-between;
+
+    /* Animations */
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
+}
+
+.nav-black{
     background-color: #111;
 }
 
 .nav-logo {
     position: fixed;
     left: 20px;
+    top: 10px;
     width: 80px;
     object-fit: contain;
 }
